test/success/integration/_succ_if_block_func_1.hs
x :: Int
x = if True then 4 else 3
main = print "hello"