test/fail/integration/_fail_grammar_expr_if_1.hs
x :: Int
x = if then 3 else 4
main = print "hello"